fixed match card text wrapping

--- a/client/components/match_history/MatchCard.module.css
+++ b/client/components/match_history/MatchCard.module.css
@@ -390,6 +390,8 @@
     margin: 0;
     font-size: 10px;
     width: 60px;
+    overflow: hidden;
+    white-space: nowrap;
     text-overflow: ellipsis;
 }
 
